# sk-graph-estimator

./: .gitignore  README.md  adv_keras_regressor.py  architecture.md  pyproject.toml  requirements.txt
docs/: architecture.md  documentation.md
examples/: dense_network.py
examples/autoencoder/: mnist.py
examples/regressor/: dense_network.py  generate_data.py
src/adv_keras_regressor/: __init__.py  regressor.py  sklearn_layer.py
src/sk_graph_estimator/: autoencoder.py  classifier.py  estimator.py
src/sk_graph_estimator/tools/: quick_build_parser.py  sae.py  vae.py
